@@ -18,8 +18,11 @@ package org.eclipse.jdt.core.tests.util;
 import org.eclipse.jdt.core.compiler.batch.BatchCompiler;
 import org.eclipse.jdt.core.tests.runtime.*;
 import java.io.*;
+import java.lang.ref.Cleaner;
 import java.net.*;
 import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -31,14 +34,35 @@ import java.util.stream.Stream;
 public class TestVerifier {
 	public String failureReason;
 
-	boolean reuseVM = true;
-	String[] classpathCache;
-	LocalVirtualMachine vm;
+	private final boolean reuseVM;
+	private String[] classpathCache;
 	private StringBuilder outputBuffer;
 	private StringBuilder errorBuffer;
-	Socket socket;
+	private final VmCleaner managedVMs= new VmCleaner();
+	private static final Cleaner cleaner= Cleaner.create();
+
 public TestVerifier(boolean reuseVM) {
 	this.reuseVM = reuseVM;
+	cleaner.register(this, this.managedVMs);
+}
+static class ClassPath {
+	private String[] classpath;
+
+	ClassPath(String[] classpath){
+		this.classpath =classpath;
+	}
+
+	@Override
+	public int hashCode() {
+		return Arrays.hashCode(this.classpath);
+	}
+
+	@Override
+	public boolean equals(Object obj) {
+		ClassPath other = (ClassPath) obj;
+		return Arrays.equals(this.classpath, other.classpath);
+	}
+
 }
 private boolean checkBuffers(String outputString, String errorString,
 		String sourceFileName, String expectedOutputString, String expectedErrorStringStart) {
@@ -126,11 +150,44 @@ public void execute(String className, String[] classpaths, String[] programArgum
 
 	launchAndRun(className, classpaths, programArguments, vmArguments);
 }
-@SuppressWarnings("deprecation")
-@Override
-protected void finalize() throws Throwable {
-	shutDown();
+
+private static class VmCleaner implements Runnable{
+	private final Map<ClassPath, LocalVirtualMachine> vmByClassPath = new HashMap<>();
+	private final Map<ClassPath, Socket> socketByClassPath = new HashMap<>();
+
+	@Override
+	public void run() {
+		// Close the socket first so that the OS resource has a chance to be freed.
+		for (Socket socket : this.socketByClassPath.values()) {
+			try {
+				socket.close();
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+		}
+		this.socketByClassPath.clear();
+		// Wait for the vm to shut down by itself for 2 seconds. If not succesfull,
+		// force the shut down.
+		for (LocalVirtualMachine vm : this.vmByClassPath.values()) {
+			try {
+				long n0 = System.nanoTime();
+				while (vm.isRunning() && (System.nanoTime() - n0 < 2_000_000_000L)) {// 2 sec
+					try {
+						Thread.sleep(1);
+					} catch (InterruptedException e) {
+					}
+				}
+				if (vm.isRunning()) {
+					vm.shutDown();
+				}
+			} catch (TargetException e) {
+				e.printStackTrace();
+			}
+		}
+		this.vmByClassPath.clear();
+	}
 }
+
 public String getExecutionOutput(){
 	StringBuilder ob = getOutputBuffer();
 	synchronized (ob) {
@@ -391,12 +448,13 @@ return Arrays.stream(classPath)
 
 private void launchAndRun(String className, String[] classpaths, String[] programArguments, String[] vmArguments) {
 	// we won't reuse the vm, shut the existing one if running
-	if (this.vm != null) {
+	for (LocalVirtualMachine vm : this.managedVMs.vmByClassPath.values()) {
 		try {
-			this.vm.shutDown();
+			vm.shutDown();
 		} catch (TargetException e) {
 		}
 	}
+	this.managedVMs.vmByClassPath.clear();
 	this.classpathCache = null;
 
 	// launch a new one
@@ -416,10 +474,11 @@ private void launchAndRun(String className, String[] classpaths, String[] progra
 	Thread outputThread;
 	Thread errorThread;
 	try {
-		this.vm = launcher.launch();
-		InputStream input = this.vm.getInputStream();
+		LocalVirtualMachine vm  = launcher.launch();
+		this.managedVMs.vmByClassPath.put(new ClassPath(classpaths), vm);
+		InputStream input = vm.getInputStream();
 		outputThread = new Thread(() -> transferTo(input, this::getOutputBuffer), "stdOutReader");
-		InputStream errorStream = this.vm.getErrorStream();
+		InputStream errorStream = vm.getErrorStream();
 		errorThread = new Thread(() -> transferTo(errorStream, this::getErrorBuffer), "stdErrReader");
 		outputThread.start();
 		errorThread.start();
@@ -457,27 +516,18 @@ private static void transferTo(InputStream stream, Supplier<StringBuilder> b) {
 
 private void launchVerifyTestsIfNeeded(String[] classpaths, String[] vmArguments) {
 	// determine if we can reuse the vm
-	if (this.vm != null && this.vm.isRunning() && this.classpathCache != null) {
-		if (classpaths.length == this.classpathCache.length) {
-			boolean sameClasspaths = true;
-			for (int i = 0; i < classpaths.length; i++) {
-				if (!this.classpathCache[i].equals(classpaths[i])) {
-					sameClasspaths = false;
-					break;
-				}
-			}
-			if (sameClasspaths) {
-				return;
-			}
-		}
+	LocalVirtualMachine vm = this.managedVMs.vmByClassPath.get(new ClassPath(classpaths));
+	if (vm != null && vm.isRunning() && this.classpathCache != null) {
+		return;
 	}
 
 	// we could not reuse the vm, shut the existing one if running
-	if (this.vm != null) {
+	if (vm != null) {
 		try {
-			this.vm.shutDown();
+			vm.shutDown();
 		} catch (TargetException e) {
 		}
+		vm = null;
 	}
 
 	this.classpathCache = classpaths;
@@ -506,10 +556,11 @@ private void launchVerifyTestsIfNeeded(String[] classpaths, String[] vmArguments
 
 		launcher.setProgramArguments(new String[] {Integer.toString(portNumber)});
 		try {
-			this.vm = launcher.launch();
-			InputStream input = this.vm.getInputStream();
+			vm = launcher.launch();
+			this.managedVMs.vmByClassPath.put(new ClassPath(classpaths), vm);
+			InputStream input = vm.getInputStream();
 			Thread outputThread = new Thread(() -> transferTo(input, this::getOutputBuffer), "stdOutReader");
-			InputStream errorStream = this.vm.getErrorStream();
+			InputStream errorStream = vm.getErrorStream();
 			Thread errorThread = new Thread(() -> transferTo(errorStream, this::getErrorBuffer), "stdErrReader");
 			outputThread.start();
 			errorThread.start();
@@ -519,24 +570,25 @@ private void launchVerifyTestsIfNeeded(String[] classpaths, String[] vmArguments
 		}
 
 		// connect to the vm
-		this.socket = null;
 		boolean isVMRunning = false;
+		Socket socket = null;
 		do {
 			try {
-				this.socket = server.accept();
-				this.socket.setTcpNoDelay(true);
+				socket=server.accept();
+				this.managedVMs.socketByClassPath.put(new ClassPath(classpaths), socket);
+				socket.setTcpNoDelay(true);
 				break;
 			} catch (UnknownHostException e) {
 			} catch (IOException e) {
 			}
-			if (this.socket == null) {
+			if (socket == null) {
 				try {
 					Thread.sleep(1);
 				} catch (InterruptedException e) {
 				}
-				isVMRunning = this.vm.isRunning();
+				isVMRunning = vm.isRunning();
 			}
-		} while (this.socket == null && isVMRunning);
+		} while (socket == null && isVMRunning);
 	} catch (IOException e) {
 		e.printStackTrace();
 		throw new Error(e.getMessage());
@@ -547,9 +599,10 @@ private void launchVerifyTestsIfNeeded(String[] classpaths, String[] vmArguments
  * Return whether no exception was thrown while running the class.
  */
 private boolean loadAndRun(String className, String[] classPath) {
-	if (this.socket != null) {
+	Socket socket = this.managedVMs.socketByClassPath.get(new ClassPath(classPath));
+	if (socket != null) {
 		try {
-			DataOutputStream out = new DataOutputStream(this.socket.getOutputStream());
+			DataOutputStream out = new DataOutputStream(socket.getOutputStream());
 			out.writeUTF(className);
 				if (classPath == null)
 					classPath = new String[0];
@@ -557,7 +610,7 @@ private boolean loadAndRun(String className, String[] classPath) {
 				for (String classpath : classPath) {
 					out.writeUTF(classpath);
 				}
-			DataInputStream in = new DataInputStream(this.socket.getInputStream());
+			DataInputStream in = new DataInputStream(socket.getInputStream());
 			try {
 				boolean result = in.readBoolean();
 				waitForFullBuffers();
@@ -572,33 +625,11 @@ private boolean loadAndRun(String className, String[] classPath) {
 	}
 	return true;
 }
+
 public void shutDown() {
-	// Close the socket first so that the OS resource has a chance to be freed.
-	if (this.socket != null) {
-		try {
-			this.socket.close();
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
-	}
-	// Wait for the vm to shut down by itself for 2 seconds. If not succesfull, force the shut down.
-	if (this.vm != null) {
-		try {
-			long n0 = System.nanoTime();
-			while (this.vm.isRunning() && (System.nanoTime() - n0 < 2_000_000_000L)) {// 2 sec
-				try {
-					Thread.sleep(1);
-				} catch (InterruptedException e) {
-				}
-			}
-			if (this.vm.isRunning()) {
-				this.vm.shutDown();
-			}
-		} catch (TargetException e) {
-			e.printStackTrace();
-		}
-	}
+	this.managedVMs.run();
 }
+
 /**
  * Verify that the class files created for the given test file can be loaded by
  * a virtual machine.
